@@ -3,11 +3,12 @@
 /**
  @file      phoenix.cpp
  @author    Mitch Richling <https://www.mitchr.me>
- @brief     Draw Phoenix Julia set fractals.@EOL
+ @brief     Draw Phoenix Julia set fractals with distance estimator.@EOL
  @std       C++20
- @see       Doxygen documentation: https://www.mitchr.me/SS/mraster/doc-examples/autodocs/html/
  @see       Writeup with images: https://www.mitchr.me/SS/phoenix/
  @see       MRaster repository: https://github.com/richmit/mraster/
+ @see       Doxygen documentation: https://www.mitchr.me/SS/mraster/doc-examples/autodocs/html/
+ @see       Related example: https://github.com/richmit/mraster/blob/master/examples/phoenix.cpp
  @copyright
   @parblock
   Copyright (c) 2024, Mitchell Jay Richling <https://www.mitchr.me> All rights reserved.
@@ -29,31 +30,6 @@
   LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
   DAMAGE.
   @endparblock
- @filedetails   
-
-  The Phoenix Fractal is given by the following iteration:
-
-    @f[ z_n = z_{n-1} + c + p\cdot z_{n-1} @f]
-
-  Where @f$ c @f$ and @f$ p @f$ are both complex parameters we may set as we wish.
-
-  This formula is iterated for each point in the complex plane (z) with the initial conditions:
-
-    @f[ \begin{align*}
-          z_{-1} & = \Im(z) + \Re(z)\cdot i \\
-          z_{-2} & = 0
-        \end{align*} @f] 
-
-  An exterior distance estimator is given by:
-
-    @f[ d_{n} = 2\cdot d_{n-1}\cdot z_{n-1} + p\cdot d_{n-2} @f]
-
-  With the initial conditions:
-
-    @f[ \begin{align*}
-          d_{-1} & = 1 \\
-          d_{-2} & = 0
-        \end{align*} @f] 
 */
 /*******************************************************************************************************************************************************.H.E.**/
 /** @cond exj */
@@ -66,15 +42,12 @@ typedef mjr::ramCanvas3c8b::colorType ct;
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------------
 std::vector<std::array<double, 9>> params {
-  /*       cr,       ci,       pr,       pi,    k, x-min, x-max, y-min, y-max */
-  {  0.566700,  0.00000, -0.50000,  0.00000, 10.0, -1.35,  1.35, -1.35,  1.35}, //  0 
-  {  0.544992,  0.00000, -0.47000,  0.00000, 10.0, -1.35,  1.35, -1.35,  1.35}, //  1
-  {  0.269000,  0.00000,  0.00000,  0.01000,  5.0, -1.10,  1.10, -1.00,  1.00}, //  2
-  { -0.400000,  0.10000,  0.29550,  0.00000, 10.0, -1.10,  1.10, -1.50,  1.50}, //  3
-  {  0.400000,  0.00000, -0.25000,  0.00000, 10.0, -1.30,  1.20, -1.00,  1.00}, //  4
-  {  0.100000,  0.60000, -0.35000,  0.00000, 10.0, -1.30,  1.30, -1.30,  1.30}, //  5
-  {  0.400000,  0.40000,  0.20500,  0.00000, 30.0, -1.30,  1.30, -1.30,  1.30}, //  6
-  {  0.400000,  0.50000,  0.20500,  0.00000, 30.0, -1.30,  1.30, -1.30,  1.30}, //  7
+  /*       cr,       ci,       pr,       pi,     k, x-min, x-max, y-min, y-max */
+  {  0.566700,  0.00000, -0.50000,  0.00000, 100.0, -1.35,  1.35, -1.35,  1.35}, //  0 
+  {  0.544992,  0.00000, -0.47000,  0.00000, 100.0, -1.35,  1.35, -1.35,  1.35}, //  1
+  {  0.269000,  0.00000,  0.00000,  0.01000, 100.0, -1.10,  1.10, -1.00,  1.00}, //  2
+  { -0.400000,  0.10000,  0.29550,  0.00000, 100.0, -1.10,  1.10, -1.50,  1.50}, //  3
+  {  0.400000,  0.00000, -0.25000,  0.00000, 100.0, -1.30,  1.20, -1.00,  1.00}, //  4
 };
 
 //--------------------------------------------------------------------------------------------------------------------------------------------------------------
@@ -92,21 +65,27 @@ int main(void) {
     mjr::ramCanvas3c8b theRamCanvas(WIDTH, HEIGHT, params[j][5], params[j][6], params[j][7], params[j][8]);
     for(int y=0;y<theRamCanvas.getNumPixY();y++) {
       for(int x=0;x<theRamCanvas.getNumPixX();x++) {
+        std::complex<double> d1(1.0, 0.0);
+        std::complex<double> d2(0.0, 0.0);
+
         std::complex<double> z1(theRamCanvas.int2realY(y), theRamCanvas.int2realX(x));
         std::complex<double> z2(0.0, 0.0);
         int count = 0;
         while((std::norm(z1)<MAXZ) && (count<=NUMITR)) {
           std::complex<double> z = z1*z1+c+p*z2;
+          std::complex<double> d = 2.0*d1*z1+p*d2;
           z2 = z1;
           z1 = z;
+          d2 = d1;
+          d1 = d;
           count++;
         }
         if(count < NUMITR)
-          theRamCanvas.drawPoint(x, y, ct::csCCfractal0RYBCW::c(static_cast<ct::csIntType>(count*params[j][4])));
+          theRamCanvas.drawPoint(x, y, ct::csCCfractal0RYBCW::c(static_cast<ct::csIntType>(dst*params[j][4])));
       }
     }
-    theRamCanvas.writeTIFFfile("phoenix_" + mjr::fmtInt(j, 2, '0') + ".tiff");
-    std::cout << "ITER(" << j <<  "): " << "DONE" << std::endl;
+    theRamCanvas.writeTIFFfile("phoenixD_" + mjr::fmtInt(j, 2, '0') + ".tiff");
+    std::cout << "ITER(" << j <<  "): " << "DONE " << mxd << std::endl;
   }
 
   std::chrono::duration<double> runTime = std::chrono::system_clock::now() - startTime;
